Head-to-head: fix long team names overlapping dissaster

--- a/src/styles/components/_matches.scss
+++ b/src/styles/components/_matches.scss
@@ -8,7 +8,7 @@
     border-top: 1px solid #e2e2e2;
     color: $ls-text-grayed;
 
-    .match-item__when, .match-item__teams, .match-item__score {
+    .match-item__when, .match-item__teams {
       padding: $sp2 $sp3;
     }
 
@@ -23,34 +23,39 @@
       display: flex;
       flex-direction: column;
       flex-grow: 1;
-    }
 
-    .match-item__teams__team, .match-item__score__outcome {
-      margin-bottom: 7px;
+      .match-item__teams__team{
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 7px;
 
-      &:last-child {
-        margin-bottom: 0;
+        &:last-child {
+          margin-bottom: 0;
+        }
+
+        &.winner {
+          font-weight: $ls-font-weight-bold;
+          color: $ls-text-dark-color;
+        }
+
+        .team__logo {
+          width: 18px;
+          margin-right: 5px;
+        }
+
+        .team__name {
+          flex-grow: 1;
+        }
+
+        .team__score {
+          display: flex;
+          flex-direction: column;
+          flex-basis: 30px;
+          flex-grow: 0;
+          flex-shrink: 0;
+          text-align: center;
+        }
       }
-    }
-
-    .match-item__teams__team__logo {
-      width: 18px;
-    }
-
-    .match-item__score {
-      display: flex;
-      flex-direction: column;
-      flex-basis: 70px;
-      text-align: center;
-    }
-
-    .match-item__score__outcome {
-      font-weight: $ls-font-weight-bold;
-    }
-
-    .match-item__teams__team.winner, .match-item__score__outcome.winner {
-      font-weight: $ls-font-weight-bold;
-      color: $ls-text-dark-color;
     }
 
     .match-item__date {
