--- a/src/styles/components/_progress.scss
+++ b/src/styles/components/_progress.scss
@@ -20,6 +20,7 @@
   flex-direction: column;
   align-items: flex-start;
   font-size: 1.3em;
+  min-width: 13%;
 
   .legend, .number {
   }
